syntax="proto3";

option go_package = "./proto";

package user_service;

service UserService{
  rpc GetByToken(RequestToken) returns (ResponseUser);
  rpc GetByUserId(RequestUser) returns (ResponseUser);
  rpc GetByUserList(RequestUsers) returns (ResponseUsers);
}

message RequestUsers{
  repeated string id=1;
}

message ResponseUsers{
  repeated User UserList=1;
}

message User{
  string id=1;
  string lastName=2;
  string firstName=3;
  string surName=4;
  optional string mimeType=5;
  optional string bucketName=6;
  optional string fileName=7;
}

message RequestToken{
  string token=1;
}

message RequestUser{
  string userId=1;
}

message ResponseUser{
  string id=1;
  string login=2;
  string lastName=3;
  string firstName=4;
  string surName=5;
  string job=6;
  string org=7;
  repeated string roles=8;
  repeated string permissions=9;
  string avatarMimeType=10;
  string avatarBucketName=11;
  string avatarFileName=12;
}